--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "qs": "^6.11.0",
     "rc-slider": "^10.0.1",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.0",
     "react-data-table-component": "^7.5.2",
     "react-dom": "^18.1.0",
     "react-grid-layout": "^1.3.4",
